# regradar-backend

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: d91fc8a0af9e_create_documents_and_document_chunks_.py
scripts/: verify_rag.py
src/regradar/: chunking.py  config.py  ingestion.py  models.py  search.py
src/regradar/api/: __init__.py  app.py  dependencies.py  errors.py  schemas.py
src/regradar/api/routers/: ask.py  documents.py  health.py  search.py
src/regradar/clients/: federal_register.py
src/regradar/database/: mappers.py  models.py  repository.py  session.py
src/regradar/embeddings/: base.py  openai_embedder.py
src/regradar/generation/: __init__.py  anthropic_generator.py  base.py  rag.py
tests/: conftest.py  test_api.py  test_chunking.py  test_federal_register.py  test_generation.py  test_repository.py  test_search.py
